--- a/scss/main.scss
+++ b/scss/main.scss
@@ -15,3 +15,5 @@
 @use 'components/staff';
 @use 'components/calendar';
 @use 'components/about';
+@use 'components/join';
+@use 'components/contact';
