--- a/scss/components/_header.scss
+++ b/scss/components/_header.scss
@@ -1,12 +1,15 @@
 @use '../variables' as *;
 
 .main-header {
-  background: $secondary-color;
+  background: rgba($secondary-color, 0.9);
+  backdrop-filter: blur(10px);
+  -webkit-backdrop-filter: blur(10px);
   box-shadow: $box-shadow;
   padding: 1rem 0;
   position: sticky;
   top: 0;
   z-index: 100;
+  border-bottom: 1px solid rgba($border-color, 0.3);
 
   .container {
     display: flex;
@@ -22,12 +25,34 @@
       height: 40px;
       margin-right: 0.75rem;
       filter: drop-shadow(0 2px 4px rgba(0, 0, 0, 0.5));
+      transition: transform $transition-speed;
+      
+      &:hover {
+        transform: rotate(-5deg) scale(1.05);
+      }
     }
     
     h1 {
       font-size: 1.5rem;
       margin: 0;
       color: $light-text;
+      text-shadow: 0 0 10px rgba($primary-color, 0.3);
+      position: relative;
+      
+      &::after {
+        content: '';
+        position: absolute;
+        width: 0;
+        height: 2px;
+        bottom: -3px;
+        left: 0;
+        background: linear-gradient(90deg, $primary-color, $accent-color-1);
+        transition: width $transition-speed;
+      }
+      
+      &:hover::after {
+        width: 100%;
+      }
     }
   }
 
@@ -44,9 +69,27 @@
     a {
       color: $text-color;
       font-weight: 500;
+      position: relative;
+      padding: 0.5rem 0;
+      
+      &::after {
+        content: '';
+        position: absolute;
+        width: 0;
+        height: 2px;
+        bottom: 0;
+        left: 0;
+        background: linear-gradient(90deg, $primary-color, $accent-color-1);
+        transition: width $transition-speed;
+        border-radius: 2px;
+      }
       
       &:hover, &.active {
         color: $primary-color;
+        
+        &::after {
+          width: 100%;
+        }
       }
     }
   }
@@ -71,6 +114,20 @@
       height: 3px;
       background: $text-color;
       transition: $transition-speed;
+      border-radius: 2px;
+      
+      &:nth-child(1), &:nth-child(3) {
+        width: 70%;
+      }
+      
+      &:nth-child(1) {
+        margin-left: auto;
+      }
+    }
+    
+    &:hover span {
+      background: $primary-color;
+      width: 100%;
     }
   }
 }
