--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -8,8 +8,8 @@ $dark-text: #0f111a;
 $border-color: #333644;
 
 // Accent colors
-$accent-color-1: #ff6c9e; // Pink accent
-$accent-color-2: #6cffe9; // Teal accent
+$accent-color-1: #ff6c9e;
+$accent-color-2: #6cffe9;
 $gradient-overlay: linear-gradient(135deg, rgba($accent-color-1, 0.15), rgba($accent-color-2, 0.15));
 
 // Typography
