--- a/scss/components/_contact.scss
+++ b/scss/components/_contact.scss
@@ -1,4 +1,3 @@
-// filepath: c:\Users\Charles\Desktop\Programming\WEBSITES\atihuva\scss\components\_contact.scss
 @use '../variables' as *;
 
 .contact-section {
@@ -271,7 +270,7 @@
   }
 }
 
-// Feedback section
+// Feedback section (DEPRECATED)
 .feedback-section {
   background: linear-gradient(145deg, 
     rgba($secondary-color, 0.6), 
