--- a/scss/components/_hero.scss
+++ b/scss/components/_hero.scss
@@ -3,13 +3,13 @@
 .hero {
   background-color: $background-color;
   padding: 6rem 0;
-  min-height: calc(100vh - 73px); // Adjust based on your header height
+  min-height: calc(100vh - 73px);
   display: flex;
   align-items: center;
   position: relative;
   overflow: hidden;
   
-  // Add decorative glow circles
+  // Decorative glow circles
   .glow-circle {
     position: absolute;
     
