--- a/scss/components/_staff.scss
+++ b/scss/components/_staff.scss
@@ -143,13 +143,13 @@
         rgba($border-color, 0)
       );
     }
-    
-    h3 {
+      h3 {
       font-size: 1.3rem;
       margin-bottom: 0.3rem;
       color: $light-text;
       position: relative;
-      display: inline-block;
+      display: block;
+      width: 100%;
     }
     
     h4 {
@@ -157,9 +157,9 @@
       font-size: 1rem;
       font-weight: 500;
       margin-bottom: 0.8rem;
-      padding-right: 1.5rem;
       position: relative;
-      display: inline-block;
+      display: block;
+      width: 100%;
       
       &::after {
         content: '';
