Changed logo, added staff modal

--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -2,6 +2,7 @@
 $primary-color: #6c9eff;
 $secondary-color: #1e2130;
 $background-color: #121622;
+$dark-bg: #121622;
 $text-color: #e0e0e0;
 $light-text: #ffffff;
 $dark-text: #0f111a;
