--- a/scss/main.scss
+++ b/scss/main.scss
@@ -13,6 +13,7 @@
 @use 'components/hero';
 @use 'components/mobile-menu';
 @use 'components/staff';
+@use 'components/staff-modal';
 @use 'components/calendar';
 @use 'components/about';
 @use 'components/join';
