--- a/components/header.html
+++ b/components/header.html
@@ -1,7 +1,7 @@
 <header class="main-header">
     <div class="container">
         <div class="logo">
-            <img src="assets/gui/logoplaceholder.webp" alt="ATIH-UVA Logo">
+            <img src="assets/gui/logo.webp" alt="ATIH-UVA Logo">
         </div>
         <nav class="main-nav">
             <ul>
