--- a/components/footer.html
+++ b/components/footer.html
@@ -1,7 +1,9 @@
 <footer class="main-footer">
-    <div class="container">
-        <div class="footer-copyright">
-            <p>&copy; <span id="current-year"></span> ATIH-UVA. All rights reserved.</p>
-        </div>
+  <div class="container">
+    <div class="footer-copyright">
+      <p>
+        &copy; <span id="current-year"></span> Societal AI. All rights reserved.
+      </p>
     </div>
+  </div>
 </footer>
