--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,21 +1,22 @@
 // Main SCSS file that uses all components
 
 // Variables
-@use 'variables' as *;
+@use "variables" as *;
 
 // Base styles
-@use 'base';
+@use "base";
 
 // Components
-@use 'components/header';
-@use 'components/footer';
-@use 'components/buttons';
-@use 'components/hero';
-@use 'components/mobile-menu';
-@use 'components/staff';
-@use 'components/staff-modal';
-@use 'components/calendar';
-@use 'components/about';
-@use 'components/join';
-@use 'components/contact';
-@use 'components/legacy';
+@use "components/header";
+@use "components/footer";
+@use "components/buttons";
+@use "components/hero";
+@use "components/hero-modern";
+@use "components/mobile-menu";
+@use "components/staff";
+@use "components/staff-modal";
+@use "components/calendar";
+@use "components/about";
+@use "components/join";
+@use "components/contact";
+@use "components/legacy";
